# amodinfo

./: Cargo.toml
src/: blueprint.rs  error.rs  main.rs  modinfo.rs
tests/: cli.rs
tests/data/: module-info.json.lite
