[package]
name = "amodinfo"
version = "0.1.0"
authors = [
    "Mårten Kongstad <marten.kongstad@gmail.com>",
]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = "2.33"
memmap = "0.7"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
